# aoc

./: .gitignore  characters  dune-project  flake.nix  foo.js  tanenbaum.opam
lib/: problem_runner.ml
lib/problems/: dune  problem_2023_01.ml  problem_2023_02.ml  problem_2023_03.ml  problem_2023_04.ml  problem_2023_05.mlasdfasdf  problem_2023_06.ml
lib/problems/generator/: gen.ml
