(rule
 (target all.ml)
 (deps
  (:problem_files
   (glob_files "./problem*{[!r][!e].ml,.re}"))
  (:generator generator/gen.exe))
 (action
  (run %{generator} %{target} %{problem_files})))

(library
 (name problems)
 (inline_tests)
 (libraries problem import str)
 (preprocess
  (pps ppx_expect ppx_deriving.show)))
